8373820: C2: Robust Node::uncast_helper infinite loop check

Reviewed-by: qamai, chagedorn